# Firefly

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
crates/firefly-adsb021/: Cargo.toml
crates/firefly-adsb021/src/: config.rs  lib.rs  listener.rs  plot.rs
crates/firefly-adsbagg/: Cargo.toml
crates/firefly-adsbagg/src/: api.rs  config.rs  geometry.rs  lib.rs  poller.rs
crates/firefly-asterix/: Cargo.toml
crates/firefly-asterix/src/: bds.rs  cat001.rs  cat002.rs  cat019.rs  cat020.rs  cat021.rs  cat034.rs  cat048.rs  cat062.rs  cat063.rs  cat065.rs  fspec.rs  lib.rs
crates/firefly-asterix/tests/: properties.rs
crates/firefly-core/: Cargo.toml
crates/firefly-core/src/: ids.rs  lib.rs  plot.rs  sensor.rs  system_track.rs  time.rs
crates/firefly-eval/: Cargo.toml
crates/firefly-eval/benches/: load.rs
crates/firefly-eval/src/: harness.rs  lib.rs  main.rs  report.rs  scenarios.rs
crates/firefly-eval/tests/: harness.rs
crates/firefly-flarm/: Cargo.toml
crates/firefly-flarm/src/: aprsis.rs  config.rs  lib.rs  ogn.rs  plot.rs
crates/firefly-fpl/: Cargo.toml
crates/firefly-geo/: Cargo.toml
crates/firefly-geo/src/: ecef.rs  enu.rs  lib.rs  polar.rs  stereographic.rs  wgs84.rs
crates/firefly-geo/tests/: frame_transform.rs  properties.proptest-regressions  properties.rs  roundtrip.rs  stereographic.rs
crates/firefly-io/: Cargo.toml
crates/firefly-io/src/: frame.rs  lib.rs
crates/firefly-meteo/: Cargo.toml
crates/firefly-meteo/src/: altitude.rs  config.rs  lib.rs  qnh.rs
crates/firefly-mlat/: Cargo.toml
crates/firefly-mlat/src/: config.rs  lib.rs  listener.rs  plot.rs
crates/firefly-multicast/: Cargo.toml
crates/firefly-multicast/src/: cat063_sender.rs  config.rs  heartbeat.rs  lib.rs  pacing.rs  receiver.rs  sensor_health.rs
crates/firefly-multicast/tests/: receiver.rs  sender.rs
crates/firefly-opensky/: Cargo.toml
crates/firefly-player/: Cargo.toml
crates/firefly-player/src/: lib.rs
crates/firefly-player/tests/: frankfurt_regression.rs  multi_radar.rs
crates/firefly-radar/: Cargo.toml
crates/firefly-radar/src/: config.rs  legacy.rs  lib.rs  listener.rs  plot.rs  service.rs
crates/firefly-recorder/: Cargo.toml
crates/firefly-recorder/src/: lib.rs
crates/firefly-server/: Cargo.toml
crates/firefly-server/src/: app.rs  config.rs  healthcheck.rs  lib.rs  live.rs  main.rs  metrics.rs  pacing.rs  replay.rs  scene.rs  snapshot.rs  sources.rs  standby.rs
crates/firefly-server/static/: airspaces.geojson  index.html
crates/firefly-server/tests/: replay_plots.rs  websocket.rs
crates/firefly-sim/: Cargo.toml
crates/firefly-sim/examples/: demo.rs
crates/firefly-sim/src/: lib.rs  radar.rs  rng.rs  run.rs  scenario.rs  target.rs
crates/firefly-track/: Cargo.toml
crates/firefly-track/src/: acceleration.rs  association.rs  clutter_map.rs  gating.rs  imm.rs  jpda.rs  kalman.rs  kalman6.rs  lib.rs  measurement.rs  metrics.rs  motion.rs  pda.rs  registration.rs  track.rs  track_number.rs  tracker.rs  vertical.rs
crates/firefly-track/tests/: identity.rs  lifecycle.rs  metrics.rs  snapshot.rs  timing.rs  tracking.rs
deploy/: README.md  validate.sh
deploy/kubernetes/: firefly.yaml
docs/: CI-und-Branch-Schutz.md  ICD-CAT062.md  INSTALLATION.md  README.md  ROADMAP.md  STATUS.md  TECHNICAL.md  glossary.md  source-input-contract.md
docs/cross-project/: README.md  todo-for-wayfinder.md
docs/decisions/: 0001-technologie-stack-und-vorgehen.md  0002-sprache-code-und-doku.md  0003-cloud-native-architektur.md  0004-assurance-und-zertifizierungsfaehigkeit.md  0005-nalgebra-als-lineare-algebra.md  0006-integration-phoenix-asd-cat062.md  0007-serde-serialisierung.md  0008-safety-track-zustand-im-tracker.md  0009-frontend-architektur-m3.md  0010-multi-radar-fusion-architektur-m4.md  0011-scan-fusion-referenz-und-initiierungs-tor.md  0012-adaptiver-track-lebenszyklus.md  0013-asynchrone-pro-plot-verarbeitung-und-periodischer-ausgabetakt.md  0013-jpda-showcase-kreuzende-ziele-statt-paralleles-nahpaar.md  0014-produktionsbetrieb-statt-lernprojekt-wayfinder-cat062.md  0015-cat062-vertikallage-und-uap-standardtreue.md  0016-cat062-track-ende-signalisierung-tse.md  0017-multicast-feed-vertrauensgrenze.md  0018-cat065-sdps-heartbeat.md  0019-adsb-integration-opensky.md  0020-live-tracker-modus-fuer-echtzeit-adsb.md  0021-konfigurierbarer-system-referenzpunkt.md  0022-cat063-sensor-status.md  0023-quell-eingangs-kontrakt-firefly-sources.md  0024-opensky-oauth2-client-credentials.md  0025-assurance-dokumenten-architektur.md  0026-flarm-ogn-eingangs-adapter.md  0027-per-track-provenienz-source-ages.md  0028-radar-asterix-eingangs-adapter.md  0029-konfigurierbares-opensky-poll-intervall.md  0030-ausbau-replay-szenen-modus.md  0031-adsb-aggregator-adapter.md  0032-cat063-uap-standardisierung.md  0033-cat063-src-reason-reserved-expansion.md  0034-sensor-registrierung-bias-schaetzung.md  0035-ca-modell-6d-imm-bank.md  0036-duplikat-identitaeten-koaleszenz.md  0037-raeumliche-clutter-karte-reflexionen.md  0038-korrelation-im-sdps-vs-cwp.md  0039-cat062-flugplan-ausleitung-manueller-rand.md  (+4 more)
docs/design/: artas-gap-roadmap.md  korrelation-code-duplikate-weeze.md
docs/milestones/: ADSB-Aggregator_Adapter.md  ASSUR1-FHA-Hazard-Analyse.md  ASSUR2-Coverage-Properties-Dossier.md  CAP1-Benchmark-Harness.md  CAP2-JPDA-Cluster-Kappe.md  FEP1-CAT034-Nordmarke-Sektor.md  FEP2-Mode-S-DAPs.md  FEP3-CAT021-Bodenstation.md  FEP4-CAT001-002-Legacy-Radar.md  FEP5-CAT020-019-WAM-MLAT.md  FLARM-Epoch-Time_Multi-Source-Fusion.md  FLARM-OGN_Adapter.md  FPL1-Flugplan-Eingang-Korrelation.md  FPL2-I062-390-Manuelle-Korrelation.md  M1-simulator.md  (+39 more)
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: cat001_decode.rs  cat002_decode.rs  cat019_decode.rs  cat020_decode.rs  cat021_decode.rs  cat034_decode.rs  cat048_decode.rs  cat062_decode.rs  cat063_decode.rs  cat065_decode.rs  sources_parse.rs
fuzz/seeds/sources_parse/: all-source-types.json
monitoring/: README.md  validate.sh
(+28 files in other folders)
