[workspace]
resolver = "2"
members = [
    "crates/firefly-geo",
    "crates/firefly-core",
    "crates/firefly-sim",
    "crates/firefly-track",
    "crates/firefly-io",
    "crates/firefly-player",
    "crates/firefly-server",
    "crates/firefly-asterix",
    "crates/firefly-multicast",
    "crates/firefly-recorder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Firefly contributors"]
repository = "https://github.com/manuelringwald/firefly"

[workspace.dependencies]
firefly-geo = { path = "crates/firefly-geo" }
firefly-core = { path = "crates/firefly-core" }
firefly-sim = { path = "crates/firefly-sim" }
firefly-io = { path = "crates/firefly-io" }
firefly-track = { path = "crates/firefly-track" }
firefly-player = { path = "crates/firefly-player" }
firefly-asterix = { path = "crates/firefly-asterix" }
firefly-multicast = { path = "crates/firefly-multicast" }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
