[workspace]
resolver = "2"
members = [
    "crates/firefly-geo",
    "crates/firefly-core",
    "crates/firefly-sim",
    "crates/firefly-track",
    "crates/firefly-io",
    "crates/firefly-player",
    "crates/firefly-server",
    "crates/firefly-asterix",
    "crates/firefly-multicast",
    "crates/firefly-recorder",
    "crates/firefly-opensky",
    "crates/firefly-flarm",
    "crates/firefly-radar",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Firefly contributors"]
repository = "https://github.com/manuelringwald/firefly"

[workspace.dependencies]
firefly-geo = { path = "crates/firefly-geo" }
firefly-core = { path = "crates/firefly-core" }
firefly-sim = { path = "crates/firefly-sim" }
firefly-io = { path = "crates/firefly-io" }
firefly-track = { path = "crates/firefly-track" }
firefly-player = { path = "crates/firefly-player" }
firefly-asterix = { path = "crates/firefly-asterix" }
firefly-multicast = { path = "crates/firefly-multicast" }
firefly-recorder = { path = "crates/firefly-recorder" }
firefly-opensky = { path = "crates/firefly-opensky" }
firefly-flarm = { path = "crates/firefly-flarm" }
firefly-radar = { path = "crates/firefly-radar" }
nalgebra = "0.33"
serde = { version = "1", features = ["derive"] }
# `float_roundtrip`: the parser recovers f64 bit-for-bit (the serializer already
# uses ryu). Required for bit-exact `.ffplots`/`.ffrec` replay (ADR 0020).
serde_json = { version = "1", features = ["float_roundtrip"] }
