[package]
name = "firefly-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared domain types (plots, sensors, time, identities) for the Firefly radar tracker."

[dependencies]
firefly-geo = { workspace = true }
serde = { workspace = true }
