[package]
name = "firefly-geo"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Geodesy and coordinate transforms (WGS84 / ECEF / local ENU / polar) for the Firefly radar tracker."

[dependencies]
serde = { workspace = true }
nalgebra = { workspace = true }

[dev-dependencies]
proptest = "1"
