[package]
name = "firefly-io"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Output adapters for the Firefly tracker: a neutral frame of system tracks serialised to wire formats (JSON now; ASTERIX CAT062 later)."

[dependencies]
firefly-geo = { workspace = true }
firefly-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
