[package]
name = "firefly-player"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The 'Player': runs a scenario through the tracker and emits the resulting Frame stream (M3)."

[dependencies]
firefly-geo = { workspace = true }
firefly-core = { workspace = true }
firefly-sim = { workspace = true }
firefly-track = { workspace = true }
firefly-io = { workspace = true }
