[package]
name = "firefly-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The Firefly M3 web server: streams the tracker's frame stream to a browser over WebSocket."

[[bin]]
name = "firefly-server"
path = "src/main.rs"

[[bin]]
name = "firefly-replay-plots"
path = "src/bin/replay_plots.rs"

[dependencies]
firefly-core = { workspace = true }
firefly-geo = { workspace = true }
firefly-track = { workspace = true }
firefly-io = { workspace = true }
firefly-asterix = { workspace = true }
firefly-multicast = { workspace = true }
firefly-recorder = { workspace = true }
firefly-opensky = { workspace = true }
firefly-flarm = { workspace = true }
firefly-radar = { workspace = true }
firefly-adsbagg = { workspace = true }
firefly-adsb021 = { workspace = true }
firefly-mlat = { workspace = true }
firefly-meteo = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
    "net",
    "time",
    "signal",
    "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "net",
    "time",
    "test-util",
] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
tower = { version = "0.5", features = ["util"] }
